Fixed es6 import/export syntax

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.2",
   "description": "Very flexible, performant, simple state management for managing a lot of rapid changes and various scenarios. Great for low overhead event management of game inputs and data streams.",
   "main": "StateManager.js",
+  "type":"module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,7 +20,7 @@
   "author": "Joshua Brewster and Garrett Flynn",
   "license": "AGPL-3.0-or-later",
   "dependencies": {
-    "objectlisteners": "^1.0.0"
+    "objectlisteners": "1.0.2"
   },
   "bugs": {
     "url": "https://github.com/brainsatplay/StateManager/issues"
